WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119494
Ignore the Apple Java placeholder plug-in
https://bugs.webkit.org/show_bug.cgi?id=119494
Summary
Ignore the Apple Java placeholder plug-in
Anders Carlsson
Reported
2013-08-05 14:03:36 PDT
Ignore the Apple Java placeholder plug-in
Attachments
Patch
(3.11 KB, patch)
2013-08-05 14:23 PDT
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-08-05 14:23:24 PDT
Created
attachment 208146
[details]
Patch
Anders Carlsson
Comment 2
2013-08-05 14:25:26 PDT
Committed
r153724
: <
http://trac.webkit.org/changeset/153724
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug