Ignore the Apple Java placeholder plug-in https://bugs.webkit.org/show_bug.cgi?id=119494 <rdar://problem/14610818>

Reviewed by Beth Dakin.

Never attempt to load the Java placeholder plug-in.

* UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
(WebKit::PluginInfoStore::shouldUsePlugin):

Canonical link: https://commits.webkit.org/137443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153724 268f45cc-cd09-0410-ab3c-d52691b4dbfc