Source/WebKit2/UIProcess/Plugins/mac/PluginInfoStoreMac.mm
@@ -80,33 +80,6 @@ bool PluginInfoStore::getPluginInfo(const String& pluginPath, PluginModuleInfo& 
     return NetscapePluginModule::getPluginInfo(pluginPath, plugin);
 }
 
-static size_t findPluginWithBundleIdentifier(const Vector<PluginModuleInfo>& plugins, const String& bundleIdentifier)
-{
-    for (size_t i = 0; i < plugins.size(); ++i) {
-        if (plugins[i].bundleIdentifier == bundleIdentifier)
-            return i;
-    }
-
-    return notFound;
-}
-
-// Returns true if the given plug-in should be loaded, false otherwise.
-static bool checkForPreferredPlugin(Vector<PluginModuleInfo>& alreadyLoadedPlugins, const PluginModuleInfo& plugin, const String& oldPluginBundleIdentifier, const String& newPluginBundleIdentifier)
-{
-    if (plugin.bundleIdentifier == oldPluginBundleIdentifier) {
-        // If we've already found the new plug-in, we don't want to load the old plug-in.
-        if (findPluginWithBundleIdentifier(alreadyLoadedPlugins, newPluginBundleIdentifier) != notFound)
-            return false;
-    } else if (plugin.bundleIdentifier == newPluginBundleIdentifier) {
-        // If we've already found the old plug-in, remove it from the list of loaded plug-ins.
-        size_t oldPluginIndex = findPluginWithBundleIdentifier(alreadyLoadedPlugins, oldPluginBundleIdentifier);
-        if (oldPluginIndex != notFound)
-            alreadyLoadedPlugins.remove(oldPluginIndex);
-    }
-
-    return true;
-}
-
 static bool shouldBlockPlugin(const PluginModuleInfo& plugin)
 {
     return PluginInfoStore::defaultLoadPolicyForPlugin(plugin) == PluginModuleBlocked;
@@ -128,8 +101,7 @@ bool PluginInfoStore::shouldUsePlugin(Vector<PluginModuleInfo>& alreadyLoadedPlu
         }
     }
 
-    // Prefer the Oracle Java plug-in over the Apple java plug-in.
-    if (!checkForPreferredPlugin(alreadyLoadedPlugins, plugin, "com.apple.java.JavaAppletPlugin",  oracleJavaAppletPluginBundleIdentifier))
+    if (plugin.bundleIdentifier == "com.apple.java.JavaAppletPlugin")
         return false;
 
     return true;
